--- a/tardisbase/testing/regression_comparison/compare_regression_data.ipynb
+++ b/tardisbase/testing/regression_comparison/compare_regression_data.ipynb
@@ -8,7 +8,7 @@
    "outputs": [],
    "source": [
     "from pathlib import Path\n",
-    "from tardisbase.testing.compare import ReferenceComparer, get_last_two_commits"
+    "from tardisbase.testing.regression_comparison.compare import ReferenceComparer, get_last_two_commits"
    ]
   },
   {
