Modified notebook and corrected paths of all files

--- a/tardisbase/testing/regression_comparison/compare_regression_data.ipynb
+++ b/tardisbase/testing/regression_comparison/compare_regression_data.ipynb
@@ -8,7 +8,8 @@
    "outputs": [],
    "source": [
     "from pathlib import Path\n",
-    "from tardisbase.testing.regression_comparison.compare import ReferenceComparer, get_last_two_commits"
+    "from tardisbase.testing.regression_comparison.compare.compare import ReferenceComparer\n",
+    "from tardisbase.testing.regression_comparison.compare.utils import get_last_two_commits"
    ]
   },
   {
@@ -30,11 +31,13 @@
    "source": [
     "import os\n",
     "\n",
+    "REGRESSION_DATA_REPO = \"../tardis-regression-data\"\n",
+    "\n",
     "ref1_hash = os.getenv('REF1_HASH')\n",
     "ref2_hash = os.getenv('REF2_HASH')\n",
     "\n",
     "if not (ref1_hash and ref2_hash):\n",
-    "    ref1_hash, ref2_hash = get_last_two_commits()\n",
+    "    ref1_hash, ref2_hash = get_last_two_commits(repo_path=REGRESSION_DATA_REPO)\n",
     "\n",
     "if not (ref1_hash and ref2_hash):\n",
     "    raise ValueError(\"Could not get commit hashes.\")\n",
@@ -101,7 +104,7 @@
    },
    "outputs": [],
    "source": [
-    "comparer = ReferenceComparer(ref1_hash=ref1_hash, ref2_hash=ref2_hash, print_path=True)\n",
+    "comparer = ReferenceComparer(ref1_hash=ref1_hash, ref2_hash=ref2_hash, print_path=True, repo_path=REGRESSION_DATA_REPO)\n",
     "\n",
     "comparer.setup()\n",
     "comparer.diff_analyzer.display_diff_tree(comparer.dcmp)"
