Removed hardcoded regression-data-path

--- a/tardisbase/testing/regression_comparison/compare_regression_data.ipynb
+++ b/tardisbase/testing/regression_comparison/compare_regression_data.ipynb
@@ -31,7 +31,7 @@
    "source": [
     "import os\n",
     "\n",
-    "REGRESSION_DATA_REPO = \"tardis-sn/tardis-regression-data\"\n",
+    "REGRESSION_DATA_REPO = os.getenv('REGRESSION_DATA_REPO')\n",
     "\n",
     "ref1_hash = os.getenv('REF1_HASH')\n",
     "ref2_hash = os.getenv('REF2_HASH')\n",
