--- a/tardisbase/testing/regression_comparison/compare_regression_data.ipynb
+++ b/tardisbase/testing/regression_comparison/compare_regression_data.ipynb
@@ -185,7 +185,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fig_same_name.layout.width = 1000\n",
+    "if fig_same_name is not None:\n",
+    "    fig_same_name.layout.width = 1000\n",
     "fig_same_name"
    ]
   },
@@ -227,7 +228,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "tardis",
    "language": "python",
    "name": "python3"
   },
