Re-organized modular files

--- a/tardisbase/testing/regression_comparison/compare_regression_data.ipynb
+++ b/tardisbase/testing/regression_comparison/compare_regression_data.ipynb
@@ -8,8 +8,8 @@
    "outputs": [],
    "source": [
     "from pathlib import Path\n",
-    "from tardisbase.testing.regression_comparison.compare.compare import ReferenceComparer\n",
-    "from tardisbase.testing.regression_comparison.compare.utils import get_last_two_commits"
+    "from tardisbase.testing.regression_comparison.compare import ReferenceComparer\n",
+    "from tardisbase.testing.regression_comparison.utils import get_last_two_commits"
    ]
   },
   {
