--- a/tardisbase/testing/regression_comparison/compare_commits.ipynb
+++ b/tardisbase/testing/regression_comparison/compare_commits.ipynb
@@ -4,19 +4,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# File Change Matrix Visualizer\n",
+    "# Visualizing File Changes Across Commits\n",
     "\n",
-    "This notebook demonstrates the FileChangeMatrixVisualizer with proper pandas display configuration."
+    "This notebook demonstrates the MultiCommitCompare Class with proper pandas display configuration."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "from tardisbase.testing.regression_comparison.run_tests import run_tests\n",
-    "from tardisbase.testing.regression_comparison.visualize_files import FileChangeMatrixVisualizer\n",
+    "from tardisbase.testing.regression_comparison.visualize_files import MultiCommitCompare\n",
     "from tardisbase.testing.regression_comparison.util import get_last_n_commits\n",
     "import pandas as pd\n",
     "from IPython.display import display"
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -118,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -158,11 +158,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "visualizer = FileChangeMatrixVisualizer(\n",
+    "visualizer = MultiCommitCompare(\n",
     "    regression_repo_path=config[\"regression_data_repo_path\"],\n",
     "    commits=regression_commits,\n",
     "    # file_extensions=('.h5', '.hdf5') # Uncomment to filter specific files\n",
@@ -182,7 +182,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "visualizer = FileChangeMatrixVisualizer(\n",
+    "visualizer = MultiCommitCompare(\n",
     "    regression_repo_path=config[\"regression_data_repo_path\"],\n",
     "    commits=regression_commits,\n",
     "    tardis_commits=processed_commits,\n",
@@ -193,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -242,7 +242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -253,7 +253,150 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "commit_info, legend, matrix = visualizer.get_analysis_results()\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Commit #</th>\n",
+       "      <th>Regression Hash</th>\n",
+       "      <th>Description</th>\n",
+       "      <th>Date</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>66a96a84</td>\n",
+       "      <td>Regression data for --Adds Si data with raw Chianti collisional data (#26)</td>\n",
+       "      <td>2024-11-18 10:21</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>d12d869b</td>\n",
+       "      <td>Regression data for --add hdf files for create_wavelength_mask util function (#47)</td>\n",
+       "      <td>2025-05-27 09:05</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3</td>\n",
+       "      <td>b008a718</td>\n",
+       "      <td>Regression data for --Correct UUID test data</td>\n",
+       "      <td>2025-05-30 13:03</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>4</td>\n",
+       "      <td>a2a946a4</td>\n",
+       "      <td>Regression data for --add the SNEC models with LFS (#48)</td>\n",
+       "      <td>2025-06-16 15:27</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>5</td>\n",
+       "      <td>9404dc59</td>\n",
+       "      <td>Regression data for --Revert \"Regression data for the ionization tests (#50)\" (#55</td>\n",
+       "      <td>2025-06-24 12:30</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Commit # Regression Hash  \\\n",
+       "0         1        66a96a84   \n",
+       "1         2        d12d869b   \n",
+       "2         3        b008a718   \n",
+       "3         4        a2a946a4   \n",
+       "4         5        9404dc59   \n",
+       "\n",
+       "                                                                          Description  \\\n",
+       "0          Regression data for --Adds Si data with raw Chianti collisional data (#26)   \n",
+       "1  Regression data for --add hdf files for create_wavelength_mask util function (#47)   \n",
+       "2                                        Regression data for --Correct UUID test data   \n",
+       "3                            Regression data for --add the SNEC models with LFS (#48)   \n",
+       "4  Regression data for --Revert \"Regression data for the ionization tests (#50)\" (#55   \n",
+       "\n",
+       "               Date  \n",
+       "0  2024-11-18 10:21  \n",
+       "1  2025-05-27 09:05  \n",
+       "2  2025-05-30 13:03  \n",
+       "3  2025-06-16 15:27  \n",
+       "4  2025-06-24 12:30  "
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "commit_info"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "A          Added\n",
+       "D        Deleted\n",
+       "M       Modified\n",
+       "•      Unchanged\n",
+       "−    Not-Present\n",
+       "Name: Legend, dtype: object"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "legend"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -3365,19 +3508,14 @@
        "306             −             −             A             •  "
       ]
      },
+     "execution_count": 12,
      "metadata": {},
-     "output_type": "display_data"
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "commit_info, legend, matrix = visualizer.get_analysis_results()\n",
-    "display(matrix)"
+    "matrix"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
   }
  ],
  "metadata": {
