--- a/tardisbase/testing/regression_comparison/compare_commits.ipynb
+++ b/tardisbase/testing/regression_comparison/compare_commits.ipynb
@@ -24,12 +24,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Configure pandas display options for better visualization\n",
-    "import pandas as pd\n",
     "pd.set_option('display.max_colwidth', None)\n",
     "pd.set_option('display.width', None)\n",
     "pd.set_option('display.max_columns', None)\n",
@@ -38,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,9 +46,9 @@
     "    \"tardis_repo_path\": \"/home/riddhi/workspace/tardis-main/tardis\",\n",
     "    \"regression_data_repo_path\": \"/home/riddhi/workspace/tardis-main/tardis-regression-data\",\n",
     "    \"branch\": \"master\",\n",
-    "    \"n\": 3,\n",
+    "    \"n\": 3, # Last n commits\n",
     "    \"target_file\": \"tardis/spectrum/tests/test_spectrum_solver/test_spectrum_solver/TestSpectrumSolver.h5\",\n",
-    "    \"commits\": [\"300e565e83112528faaa76e970057ffb1b13f743\", \"2a06fdfb60190bbd9b49ff572d78772607138660\", \"2d775dcd1c486227532f537fc41066e942000e56\"],  # Uncomment for specific commits\n",
+    "    # \"commits\": [\"300e565e83112528faaa76e970057ffb1b13f743\", \"2a06fdfb60190bbd9b49ff572d78772607138660\", \"2d775dcd1c486227532f537fc41066e942000e56\"],  # Uncomment for specific commits\n",
     "    # \"commits\": commits.calculate_commits(n=10, gap=0, info=False), #Uncomment for n commits with custom gap\n",
     "    \"use_conda\": True,\n",
     "    \"conda_manager\": \"conda\"\n",
@@ -78,7 +77,10 @@
     "        config[\"target_file\"], \n",
     "        n=config[\"n\"], \n",
     "        use_conda=config[\"use_conda\"],\n",
-    "        conda_manager=config[\"conda_manager\"]\n",
+    "        conda_manager=config[\"conda_manager\"],\n",
+    "        force_recreate=True,\n",
+    "        test_path=\"tardis/plasma\",\n",
+    "        default_curr_env=\"/home/riddhigangbhoj/miniforge3/envs/tardis-master\"\n",
     "    )"
    ]
   },
@@ -87,7 +89,7 @@
    "metadata": {},
    "source": [
     "### Case 2: Test specific TARDIS commits\n",
-    "</br>When `commits_input` is a list of commit hashes"
+    "When `commits_input` is a list of commit hashes"
    ]
   },
   {
@@ -178,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -188,6 +190,7 @@
     "    tardis_commits=processed_commits,\n",
     "    tardis_repo_path=config[\"tardis_repo_path\"],\n",
     "    # file_extensions=('.h5', '.hdf5') # Uncomment to filter specific files\n",
+    "    compare_function=\"git_diff\"\n",
     ")"
    ]
   },
@@ -243,18 +246,11 @@
    "source": [
     "matrix"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "tardis",
    "language": "python",
    "name": "python3"
   },
