Add Documentation test-1

--- a/docs/compare_commits.ipynb
+++ b/docs/compare_commits.ipynb
@@ -47,7 +47,7 @@
     "    \"regression_data_repo_path\": \"/home/riddhi/workspace/tardis-main/tardis-regression-data\",\n",
     "    \"branch\": \"master\",\n",
     "    \"n\": 3, # Last n commits\n",
-
+    "    \"target_file\": \"tardis/spectrum/tests/test_spectrum_solver/test_spectrum_solver/TestSpectrumSolver.h5\",\n",
     "    # \"commits\": [\"300e565e83112528faaa76e970057ffb1b13f743\", \"2a06fdfb60190bbd9b49ff572d78772607138660\", \"2d775dcd1c486227532f537fc41066e942000e56\"],  # Uncomment for specific commits\n",
     "    # \"commits\": commits.calculate_commits(n=10, gap=0, info=False), #Uncomment for n commits with custom gap\n",
     "    \"use_conda\": True,\n",
@@ -70,15 +70,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "processed_commits, regression_commits, original_head = run_tests(\n",
+    "processed_commits, regression_commits, original_head, target_file_path = run_tests(\n",
     "        config[\"tardis_repo_path\"], \n",
     "        config[\"regression_data_repo_path\"], \n",
     "        config[\"branch\"],\n",
+    "        config[\"target_file\"], \n",
     "        n=config[\"n\"], \n",
     "        use_conda=config[\"use_conda\"],\n",
     "        conda_manager=config[\"conda_manager\"],\n",
     "        force_recreate=True,\n",
-    "        test_path=\"tardis/spectrum/tests/test_spectrum_solver.py\",\n",
+    "        test_path=\"tardis/plasma\",\n",
     "        default_curr_env=\"/home/riddhigangbhoj/miniforge3/envs/tardis-master\"\n",
     "    )"
    ]
@@ -97,10 +98,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# processed_commits, regression_commits, original_head = run_tests(\n",
+    "# processed_commits, regression_commits, original_head, target_file_path = run_tests(\n",
     "#     config[\"tardis_repo_path\"], \n",
     "#     config[\"regression_data_repo_path\"], \n",
     "#     config[\"branch\"], \n",
+    "#     config[\"target_file\"], \n",
     "#     commits_input=config[\"commits\"],\n",
     "#     use_conda=config[\"use_conda\"],\n",
     "#     conda_manager=config[\"conda_manager\"]\n",
