--- a/tardisbase/testing/regression_comparison/compare_commits.ipynb
+++ b/tardisbase/testing/regression_comparison/compare_commits.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,7 +47,6 @@
     "    \"regression_data_repo_path\": \"/home/riddhi/workspace/tardis-main/tardis-regression-data\",\n",
     "    \"branch\": \"master\",\n",
     "    \"n\": 3, # Last n commits\n",
-
     "    # \"commits\": [\"300e565e83112528faaa76e970057ffb1b13f743\", \"2a06fdfb60190bbd9b49ff572d78772607138660\", \"2d775dcd1c486227532f537fc41066e942000e56\"],  # Uncomment for specific commits\n",
     "    # \"commits\": commits.calculate_commits(n=10, gap=0, info=False), #Uncomment for n commits with custom gap\n",
     "    \"use_conda\": True,\n",
@@ -78,7 +77,7 @@
     "        use_conda=config[\"use_conda\"],\n",
     "        conda_manager=config[\"conda_manager\"],\n",
     "        force_recreate=True,\n",
-    "        test_path=\"tardis/spectrum/tests/test_spectrum_solver.py\",\n",
+    "        test_path=\"tardis/plasma\",\n",
     "        default_curr_env=\"/home/riddhigangbhoj/miniforge3/envs/tardis-master\"\n",
     "    )"
    ]
@@ -93,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -118,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -138,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -158,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -211,7 +210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
