Update notebook and add use_new_envs option

--- a/tardisbase/testing/regression_comparison/compare_commits.ipynb
+++ b/tardisbase/testing/regression_comparison/compare_commits.ipynb
@@ -6,7 +6,24 @@
    "source": [
     "# Visualizing File Changes Across Commits\n",
     "\n",
-    "This notebook demonstrates the MultiCommitCompare Class with proper pandas display configuration."
+    "This notebook analyzes differences in files across multiple tardis-regression-data commits. There are two main approaches to get tardis-regression-data commits:\n",
+    "\n",
+    "### Method 1: Run pytest on tardis commits and generate regression commits (False commits)\n",
+    "\n",
+    "To fetch tardis commits, you have three options:\n",
+    "\n",
+    "- Run pytest on latest n tardis commits\n",
+    "- Run pytest on str or list of multiple tardis commits\n",
+    "\n",
+    "### Method 2: Directly use tardis-regression-data repo commits\n",
+    "\n",
+    "To get those commits, you have two options:\n",
+    "\n",
+    "- Manually provide a list of multiple tardis-regression-data commits\n",
+    "- Get last n tardis-regression-data commits\n",
+    "\n",
+    "### Note:\n",
+    "By default this notebook runs pytest on latest n tardis commits and generates falsey regression commits to analyze difference."
    ]
   },
   {
@@ -23,6 +40,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Display Configuration"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -36,6 +60,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Setup Configuration"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -46,10 +77,8 @@
     "    \"tardis_repo_path\": \"/home/riddhi/workspace/tardis-main/tardis\",\n",
     "    \"regression_data_repo_path\": \"/home/riddhi/workspace/tardis-main/tardis-regression-data\",\n",
     "    \"branch\": \"master\",\n",
-    "    \"n\": 3, # Last n commits\n",
+    "    \"n\": 3, # Last n commits   \n",
     "    # \"commits\": [\"300e565e83112528faaa76e970057ffb1b13f743\", \"2a06fdfb60190bbd9b49ff572d78772607138660\", \"2d775dcd1c486227532f537fc41066e942000e56\"],  # Uncomment for specific commits\n",
-    "    # \"commits\": commits.calculate_commits(n=10, gap=0, info=False), #Uncomment for n commits with custom gap\n",
-    "    \"use_conda\": True,\n",
     "    \"conda_manager\": \"conda\"\n",
     "}"
    ]
@@ -58,9 +87,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Option 1: Run tests to generate regression data commits\n",
+    "## Method 1: Run pytest on tardis commits to generate falsey regression data commits\n",
     "\n",
-    "### Case 1: Test latest N TARDIS commits"
+    "### Case 1: Test latest N TARDIS commits\n",
+    "Important Note: \n",
+    "1. Comment out `commits` from config\n",
+    "2. Provide the value of `n` in config\n",
+    "3. To forcely recreate new enviornment each time even when enviornment already exist, do `force_recreate` as `True`\n",
+    "4. Either provide entire \"tardis\" module or selective path like \"tardis/spectrum/tests/test_spectrum_solver.py\" in `test_path`\n",
+    "5. Provide path to default current enviornment in `default_curr_env`\n",
+    "6. If you want to use default current enviornment only without creating new enviornment each time, do `use_new_envs` as `True`."
    ]
   },
   {
@@ -70,15 +106,11 @@
    "outputs": [],
    "source": [
     "processed_commits, regression_commits, original_head = run_tests(\n",
-    "        config[\"tardis_repo_path\"], \n",
-    "        config[\"regression_data_repo_path\"], \n",
-    "        config[\"branch\"],\n",
-    "        n=config[\"n\"], \n",
-    "        use_conda=config[\"use_conda\"],\n",
-    "        conda_manager=config[\"conda_manager\"],\n",
+    "        **config,\n",
     "        force_recreate=True,\n",
-    "        test_path=\"tardis/plasma\",\n",
-    "        default_curr_env=\"/home/riddhigangbhoj/miniforge3/envs/tardis-master\"\n",
+    "        test_path=\"tardis/spectrum/tests/test_spectrum_solver.py\",\n",
+    "        default_curr_env=\"/home/riddhigangbhoj/miniforge3/envs/tardis-master\",\n",
+    "        use_new_envs=True\n",
     "    )"
    ]
   },
@@ -87,7 +119,15 @@
    "metadata": {},
    "source": [
     "### Case 2: Test specific TARDIS commits\n",
-    "When `commits_input` is a list of commit hashes"
+    "\n",
+    "Important Note:\n",
+    "1. Comment out `n` from config\n",
+    "2. `commits_input` is list of `commits` hashes from config \n",
+    "3. If tardis commits provided are [1,2,3,4] then the comparison would be [\"2-1\",\"3-2\",\"4-3\"] of the respective regression commits. So, make the list accordingly.\n",
+    "4. To forcely recreate new enviornment each time even when enviornment already exist, do `force_recreate` as `True`\n",
+    "5. Either provide entire \"tardis\" module or selective path like \"tardis/spectrum/tests/test_spectrum_solver.py\" in `test_path`\n",
+    "6. Provide path to default current enviornment in `default_curr_env`\n",
+    "7. If you want to use default current enviornment only without creating new enviornment each time, do `use_new_envs` as `True`."
    ]
   },
   {
@@ -96,23 +136,27 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# processed_commits, regression_commits, original_head = run_tests(\n",
-    "#     config[\"tardis_repo_path\"], \n",
-    "#     config[\"regression_data_repo_path\"], \n",
-    "#     config[\"branch\"], \n",
-    "#     commits_input=config[\"commits\"],\n",
-    "#     use_conda=config[\"use_conda\"],\n",
-    "#     conda_manager=config[\"conda_manager\"]\n",
-    "# )"
+    "processed_commits, regression_commits, original_head = run_tests(\n",
+    "    **config, \n",
+    "    commits_input=config[\"commits\"],\n",
+    "    conda_manager=config[\"conda_manager\"],\n",
+    "    force_recreate=True,\n",
+    "    test_path=\"tardis/spectrum/tests/test_spectrum_solver.py\",\n",
+    "    default_curr_env=\"/home/riddhigangbhoj/miniforge3/envs/tardis-master\",\n",
+    "    use_new_envs=True\n",
+    ")"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Option 2: Use existing regression data commits\n",
+    "## Method 2: Use existing regression data commits\n",
     "\n",
-    "### A.  Manual Commit Selection"
+    "### A.  Manual Commit Selection\n",
+    "Note:\n",
+    "1. No need to run pytest for this.\n",
+    "2. If commits provided are [1,2,3,4] then the comparison would be [\"2-1\",\"3-2\",\"4-3\"]. So, make the list accordingly."
    ]
   },
   {
@@ -132,7 +176,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### B.  Automatically fetch the most recent N commits from regression data repository"
+    "### B.  Automatically fetch the most recent N commits from regression data repository\n",
+    "Note:\n",
+    "1. No need to run pytest for this.\n",
+    "2. Set `n` to the number of recent regression commits you want to fetch."
    ]
   },
   {
@@ -152,7 +199,15 @@
     "## Visualize File Changes\n",
     "Create a visualizer object to analyze file changes across commits.\n",
     "\n",
-    "Case 1: Direct regression data commits (no TARDIS commits)"
+    "#### Case 1: Direct regression data commits (no TARDIS commits)\n",
+    "Use when you are directly providing regression commits.\n",
+    "Note:\n",
+    "1. Uncomment and set `file_extensions` to any type of file type to filter specific files.\n",
+    "2. Choose `compare_function` of your choice either \"git_diff\" or \"cmd_diff\"\n",
+    "    - 'git_diff': Uses git's built-in diff functionality to compare files\n",
+    "          directly within the repository. Fast and efficient for text files.\n",
+    "    - 'cmd_diff': Extracts files to temporary locations and uses the\n",
+    "          system's diff command."
    ]
   },
   {
@@ -165,6 +220,7 @@
     "#     regression_repo_path=config[\"regression_data_repo_path\"],\n",
     "#     commits=regression_commits,\n",
     "#     # file_extensions=('.h5', '.hdf5') # Uncomment to filter specific files\n",
+    "#     compare_function=\"git_diff\"\n",
     "# )\n"
    ]
   },
@@ -172,7 +228,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Case 2: Regression data commits generated from TARDIS commits"
+    "#### Case 2: Regression data commits generated from TARDIS commits\n",
+    "Use when you are providing tardis comits.\n",
+    "Note:\n",
+    "1. Uncomment and set `file_extensions` to any type of file type to filter specific files.\n",
+    "2. Choose `compare_function` of your choice either \"git_diff\" or \"cmd_diff\"\n",
+    "    - 'git_diff': Uses git's built-in diff functionality to compare files\n",
+    "          directly within the repository. Fast and efficient for text files.\n",
+    "    - 'cmd_diff': Extracts files to temporary locations and uses the\n",
+    "          system's diff command.\n",
+    "3. These regression commits are falsey commits(created just for testing)."
    ]
   },
   {
@@ -192,12 +257,18 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Analyze the commits"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Analyze the commits\n",
     "visualizer.analyze_commits()"
    ]
   },
