--- a/tardisbase/testing/regression_comparison/compare_commits.ipynb
+++ b/tardisbase/testing/regression_comparison/compare_commits.ipynb
@@ -96,7 +96,7 @@
     "3. To forcely recreate new enviornment each time even when enviornment already exist, do `force_recreate` as `True`\n",
     "4. Either provide entire \"tardis\" module or selective path like \"tardis/spectrum/tests/test_spectrum_solver.py\" in `test_path`\n",
     "5. Provide path to default current enviornment in `default_curr_env`\n",
-    "6. If you want to use default current enviornment only without creating new enviornment each time, do `use_new_envs` as `True`."
+    "6. If you want to use default current enviornment only without creating new enviornment each time, do `use_new_envs` as `False`."
    ]
   },
   {
@@ -127,7 +127,7 @@
     "4. To forcely recreate new enviornment each time even when enviornment already exist, do `force_recreate` as `True`\n",
     "5. Either provide entire \"tardis\" module or selective path like \"tardis/spectrum/tests/test_spectrum_solver.py\" in `test_path`\n",
     "6. Provide path to default current enviornment in `default_curr_env`\n",
-    "7. If you want to use default current enviornment only without creating new enviornment each time, do `use_new_envs` as `True`."
+    "7. If you want to use default current enviornment only without creating new enviornment each time, do `use_new_envs` as `False`."
    ]
   },
   {
@@ -136,15 +136,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "processed_commits, regression_commits, original_head = run_tests(\n",
-    "    **config, \n",
-    "    commits_input=config[\"commits\"],\n",
-    "    conda_manager=config[\"conda_manager\"],\n",
-    "    force_recreate=True,\n",
-    "    test_path=\"tardis/spectrum/tests/test_spectrum_solver.py\",\n",
-    "    default_curr_env=\"/home/riddhigangbhoj/miniforge3/envs/tardis-master\",\n",
-    "    use_new_envs=True\n",
-    ")"
+    "# processed_commits, regression_commits, original_head = run_tests(\n",
+    "#     **config, \n",
+    "#     commits_input=config[\"commits\"],\n",
+    "#     conda_manager=config[\"conda_manager\"],\n",
+    "#     force_recreate=True,\n",
+    "#     test_path=\"tardis/spectrum/tests/test_spectrum_solver.py\",\n",
+    "#     default_curr_env=\"/home/riddhigangbhoj/miniforge3/envs/tardis-master\",\n",
+    "#     use_new_envs=True\n",
+    "# )"
    ]
   },
   {
@@ -198,16 +198,16 @@
    "source": [
     "## Visualize File Changes\n",
     "Create a visualizer object to analyze file changes across commits.\n",
-    "\n",
-    "#### Case 1: Direct regression data commits (no TARDIS commits)\n",
-    "Use when you are directly providing regression commits.\n",
     "Note:\n",
     "1. Uncomment and set `file_extensions` to any type of file type to filter specific files.\n",
     "2. Choose `compare_function` of your choice either \"git_diff\" or \"cmd_diff\"\n",
     "    - 'git_diff': Uses git's built-in diff functionality to compare files\n",
     "          directly within the repository. Fast and efficient for text files.\n",
     "    - 'cmd_diff': Extracts files to temporary locations and uses the\n",
-    "          system's diff command."
+    "          system's diff command.\n",
+    "\n",
+    "#### Case 1: Direct regression data commits (no TARDIS commits)\n",
+    "Use when you are directly providing regression commits.\n"
    ]
   },
   {
@@ -231,13 +231,7 @@
     "#### Case 2: Regression data commits generated from TARDIS commits\n",
     "Use when you are providing tardis comits.\n",
     "Note:\n",
-    "1. Uncomment and set `file_extensions` to any type of file type to filter specific files.\n",
-    "2. Choose `compare_function` of your choice either \"git_diff\" or \"cmd_diff\"\n",
-    "    - 'git_diff': Uses git's built-in diff functionality to compare files\n",
-    "          directly within the repository. Fast and efficient for text files.\n",
-    "    - 'cmd_diff': Extracts files to temporary locations and uses the\n",
-    "          system's diff command.\n",
-    "3. These regression commits are falsey commits(created just for testing)."
+    "1. These regression commits are falsey commits(created just for testing)."
    ]
   },
   {
