--- a/tardisbase/testing/regression_comparison/compare_commits.ipynb
+++ b/tardisbase/testing/regression_comparison/compare_commits.ipynb
@@ -35,8 +35,7 @@
     "from tardisbase.testing.regression_comparison.run_tests import run_tests\n",
     "from tardisbase.testing.regression_comparison.visualize_files import MultiCommitCompare\n",
     "from tardisbase.testing.regression_comparison.util import get_last_n_commits\n",
-    "import pandas as pd\n",
-    "from IPython.display import display"
+    "import pandas as pd"
    ]
   },
   {
@@ -202,7 +201,7 @@
     "1. Uncomment and set `file_extensions` to any type of file type to filter specific files.\n",
     "2. Choose `compare_function` of your choice either \"git_diff\" or \"cmd_diff\"\n",
     "    - 'git_diff': Uses git's built-in diff functionality to compare files\n",
-    "          directly within the repository. Fast and efficient for text files.\n",
+    "          directly within the repository.\n",
     "    - 'cmd_diff': Extracts files to temporary locations and uses the\n",
     "          system's diff command.\n",
     "\n",
