--- a/docs/compare_commits.ipynb
+++ b/docs/compare_commits.ipynb
@@ -2256,7 +2256,9 @@
     "### This displays the description of commits which are used to analyze differences.\n",
     "Note:\n",
     "1. The false commits generated from tardis commits uses description of tardis commits with prefix \"Regression data for --\"\n",
-    "2. Directly provided regression commit uses its description as it is."
+    "2. Directly provided regression commit uses its description as it is.\n",
+    "3. Description contains first 60 characters of the actual message.\n",
+    "4. Commit hashes printed are shortened to 6 characters."
    ]
   },
   {
@@ -2380,7 +2382,10 @@
    "metadata": {},
    "source": [
     "### The matrix below shows file changes across commit transitions. \n",
-    "Each row represents a file, and each column represents a commit transition (e.g., \"2cbdea-6483ea\" means changes from commit 2cbdea to 6483ea).\n"
+    "Each row represents a file, and each column represents a commit transition (e.g., \"2cbdea-6483ea\" means changes from commit 2cbdea to 6483ea).\n",
+    "\n",
+    "Note:\n",
+    "This transition prints only first 6 characters of each commits (e.g., \"0d62366668e7c74d01fc56e8120ae228564eb256\" is shortened to \"0d6236\").\n"
    ]
   },
   {
