last_two -> last_n

--- a/tardisbase/testing/regression_comparison/compare_regression_data.ipynb
+++ b/tardisbase/testing/regression_comparison/compare_regression_data.ipynb
@@ -9,7 +9,7 @@
    "source": [
     "from pathlib import Path\n",
     "from tardisbase.testing.regression_comparison.compare import ReferenceComparer\n",
-    "from tardisbase.testing.regression_comparison.util import get_last_two_commits"
+    "from tardisbase.testing.regression_comparison.util import get_last_n_commits"
    ]
   },
   {
@@ -37,7 +37,7 @@
     "ref2_hash = os.getenv('REF2_HASH')\n",
     "\n",
     "if not (ref1_hash and ref2_hash):\n",
-    "    ref1_hash, ref2_hash = get_last_two_commits(repo_path=REGRESSION_DATA_REPO)\n",
+    "    ref1_hash, ref2_hash = get_last_n_commits(repo_path=REGRESSION_DATA_REPO)\n",
     "\n",
     "if not (ref1_hash and ref2_hash):\n",
     "    raise ValueError(\"Could not get commit hashes.\")\n",
@@ -134,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "e52d89cc",
    "metadata": {
     "scrolled": true
